kubernetes/cluster/smart-home/hass/hass.yaml
# Service: Home Assistant
# Ingress: hass.brhd.io
# Label: app.kubernetes.io/name: home-assistant
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
  namespace: smart-home
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
  namespace: smart-home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  revisionHistoryLimit: 1
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [
            {
              "name": "macvlan-pub-network",
              "namespace": "kube-system",
              "mac": "ae:46:c0:d1:f4:e4",
              "ips": ["192.168.1.18/24"]
            }
          ]
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2026.9.4
          name: home-assistant
          resources:
            requests:
              cpu: 100m
              memory: 700Mi
            limits:
              memory: 1200Mi
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
            - name: home-assistant-secret
              mountPath: /config/secrets.yaml
              subPath: secrets.yaml
              readOnly: true
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: home-assistant-secret
          secret:
            secretName: home-assistant
